2007-09-04  Simon Budig  <simon@gimp.org>

	* app/core/gimpparamspecs.c: fix NULL handling and formatting.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* configure.in: bump version to 2.4.0-rc3.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* Made 2.4.0-rc2 release.

	* app/Makefile.am (dist-dump-gimprc): added some sed voodoo to
	make sure the num-processors in the distributed gimprc and its
	manpage don't depend on the machine that does make dist.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-region.c: Applied slightly reformatted
	patch from Jakub Friedl and Daniel Hornung which ROUND()s the
	floating point result values before assigning them to integers to
	avoid reducing the output space to [0..254] (thus darkening the
	image). Fixes bug #472806.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* data/tips/Makefile.am
	* desktop/Makefile.am:
	s/.intltool-merge-cachemake/.intltool-merge-cache/ to fix
	distcheck, probably a "make" was entered in the wrong window.

2007-09-02  Michael Natterer  <mitch@gimp.org>

	* configure.in: bump version to 2.4.0-rc2.

2007-09-02  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-draw.c
	(gimp_display_shell_draw_area): Remove the STRESS_TEST stuff,
	gimp_image_invalidate_without_render does not exist anymore
	anyway.

2007-09-02  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleselecttool.c
	(gimp_rect_select_tool_update_option_defaults): New function to
	update default values for Fixed: Size. This function is called to
	update defaults values for Fixed: Size to that of the pending
	rectangle width x height if there is one, or 100x100 otherwise.

	* app/tools/gimpcroptool.c
	(gimp_crop_tool_update_option_defaults): Set Fixed: Size to the
	size of the pending crop rectangle, or 100x100 if there is none.

2007-09-01  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimpcroptool.c
	(gimp_crop_tool_update_default_fixed_ratio_options):