@@ -1,3 +1,10 @@
+2007-09-04  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpparamspecs.c: remove unbalanced "*/"
+
+	* app/core/gimpdrawable-transform.c
+	* app/core/gimp-transform-resize.c: formatting.
+
 2007-09-04  Simon Budig  <simon@gimp.org>
 
 	* app/core/gimpparamspecs.c: fix NULL handling and formatting.
